# TKAN

./: pyproject.toml
examples/: experiments.py  mg_train_eval.py  pendulum_train_eval.py  print_KAN_kayers.py  running_example.py  running_example_eval.py  sleep_classification.py  sleep_evaluation.py
tkan/: __init__.py  loader.py  tkan.py  utils.py
