[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tkan" 
version = "0.4.3" 
description = "Temporal KAN model"
authors = [ "Rémi Genet", "Hugo Inzirillo"]  
readme = "README.md"  
packages = [{include = "tkan"}]  

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
keras = "^3.0.0"
keras_efficient_kan = "^0.1.9"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "^2.18.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
pyarrow = "^18.0.0"
mne = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-xdist = "^3.6.1"
tensorflow = "^2.15.0"
torch = "^2.0.0"
jax = "^0.4.13"
jaxlib = "^0.4.13"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
filterwarnings = [
    "ignore:Can't initialize NVML:UserWarning",
    "ignore:jax.xla_computation is deprecated:DeprecationWarning",
    "ignore::DeprecationWarning:jax._src.dtypes",
    "ignore:Type google._upb._message.MessageMapContainer uses PyType_Spec with a metaclass that has custom tp_new:DeprecationWarning:importlib",
    "ignore:Type google._upb._message.ScalarMapContainer uses PyType_Spec with a metaclass that has custom tp_new:DeprecationWarning:importlib",
]
